MD History: add sign in promo in synced tabs when user isn't logged in

Show sign in promo when user is signed out. When user clicks to sign in,
show messages when it's loading synced tabs from backend or there is no
synced device found.

BUG=614595
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2077473002
Cr-Commit-Position: refs/heads/master@{#401220}

Former-commit-id: 8e52a260683db459e9adb524f124c3d8af9d937c