chrome/browser/resources/md_history/compiled_resources2.gyp
@@ -95,6 +95,7 @@
       'dependencies': [
         '../history/compiled_resources2.gyp:externs',
         '<(DEPTH)/ui/webui/resources/js/compiled_resources2.gyp:icon',
+        '<(DEPTH)/ui/webui/resources/js/compiled_resources2.gyp:load_time_data',
       ],
       'includes': ['../../../../third_party/closure_compiler/compile_js2.gypi'],
     },
